--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "axios": "^1.6.7",
@@ -23,7 +24,7 @@
     "cmdk": "^1.0.0",
     "cookies-next": "^4.1.1",
     "lucide-react": "^0.344.0",
-    "next": "14.1.2",
+    "next": "^14.2.17",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
